modules/ncml_module/tests/baselines/invalid_attrs/error_agg_bad_attr.ncml.ddx
<?xml version="1.0" encoding="ISO-8859-1"?>
<response reqID="some_unique_value" xmlns="http://xml.opendap.org/ns/bes/1.0#">
    <getDDX>
        <BESError>
            <Type>3</Type>
            <Message>NCMLModule ParseError: at *.ncml line=6: Got invalid attribute for element = aggregation The invalid attributes were: {typee, dimensionName, checkEvery, name, orgName}</Message>
            <Administrator>admin.email.address@your.domain.name</Administrator>
        </BESError>
    </getDDX>
</response>
